# detection-server

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  model_runner.py  pyproject.toml  requirements.txt
.github/workflows/: run_on_local_server.yml
airflow/dags/: DAG_sample.py
conf/: config.py  config_unittest.py  example-conf.yml  file-example-conf.yml  kafka-example-conf.yml
docs/: Setup.md  SetupAndRunAirflow.md
examples/: TestAPIServerWithKafka.ipynb  detection-request.in  example-conf.yml  file-example-conf.yml  kafka-dev.conf  kafka-local.conf  local-test.conf
kafka_utils/: __init__.py  kafka_pub.py  kafka_sub.py
kafka_utils/models/: ReportRecord.py  RequestMessage.py  __init__.py
mock/: api_server_mock.py  model_mock.py
mocks/: api_server_mock.py  model_mock.py
scripts/: shortcuts.sh
