[project]
name = "detection-server-selab"
version = "0.1.0"
description = "Detection server of SELab for the HyukShinDoYak R&D project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-mongo>=4.2.2",
    "apache-airflow>=2.10.4",
    "flask>=2.2.5",
    "kafka-python>=2.0.2",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]
